Moved JS to MEAN part: engine initialy moved & fixed file structure

--- a/mean/client/modules/engine/index.htm
+++ b/mean/client/modules/engine/index.htm
@@ -12,12 +12,12 @@
 
         <title>TID</title>
 
-        <link rel="stylesheet" type="text/css" href="lib/bootstrap.css">
-        <script type="text/javascript" src="lib/jquery.js"></script>
-        <script type="text/javascript" src="lib/bootstrap.js"></script>
+        <link rel="stylesheet" type="text/css" href="../../vendors/bootstrap.css">
+        <script type="text/javascript" src="../../vendors/jquery.js"></script>
+        <script type="text/javascript" src="../../vendors/bootstrap.js"></script>
 
-        <link rel="stylesheet" type="text/css" href="lib/bootstrap-slider.css">
-        <script type="text/javascript" src="lib/bootstrap-slider.js"></script>
+        <link rel="stylesheet" type="text/css" href="../../vendors/bootstrap-slider.css">
+        <script type="text/javascript" src="../../vendors/bootstrap-slider.js"></script>
         <!-- seiyria.github.io/bootstrap-slider -->
 
         <script type="text/javascript" src="core.js"></script>
