Moved all engine functionality to angular application

--- a/mean/client/modules/engine/index.htm
+++ b/mean/client/modules/engine/index.htm
@@ -20,7 +20,6 @@
         <script type="text/javascript" src="../../vendors/bootstrap-slider.js"></script>
         <!-- seiyria.github.io/bootstrap-slider -->
 
-        <script type="text/javascript" src="core.js"></script>
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body ng-app="TidApp" tid-engine-form>
@@ -38,8 +37,17 @@
                         <div class="col-lg-3 col-md-4 col-xs-5 settings-hor-title">Mode</div>
                         <div class="col-lg-9 col-md-8 col-xs-7">
                             <span id="mode" class="btn-group" role="group">
-                                <button type="button" class="btn btn-default" id="mode-recheck" data-value="recheck">recheck holes</button>
-                                <button type="button" class="btn btn-default active" id="mode-incremental" data-value="incremental">incremental</button>
+                                <button type="button" class="btn btn-default" id="mode-recheck" data-value="recheck"
+                                   ng-class="{active: tidEngineFormCtrl.modeRecheckActive}"
+                                   ng-click="tidEngineFormCtrl.onModeRecheckClick()">
+                                    recheck holes
+                                </button>
+
+                                <button type="button" class="btn btn-default" id="mode-incremental" data-value="incremental"
+                                   ng-class="{active: tidEngineFormCtrl.modeIncrementalActive}"
+                                   ng-click="tidEngineFormCtrl.onModeIncrementalClick()">
+                                    incremental
+                                </button>
                             </span>
                         </div>
                     </div>
@@ -48,18 +56,37 @@
                         <div class="col-lg-3 col-md-4 col-xs-5 settings-hor-title">Actions</div>
                         <div class="col-lg-9 col-md-8 col-xs-7">
                             <span class="btn-group" role="group">
-                                <button id="start" type="button" class="btn btn-success">start</button>
-                                <button id="stop" type="button" class="btn btn-danger disabled">stop</button>
+                                <button id="start" type="button" class="btn btn-success"
+                                   ng-disabled="tidEngineFormCtrl.startDisabled"
+                                   ng-class="{active: tidEngineFormCtrl.startActive}"
+                                   ng-click="tidEngineFormCtrl.onStartClick()">
+                                    start
+                                </button>
+                                <button id="stop" type="button" class="btn btn-danger disabled"
+                                   ng-disabled="tidEngineFormCtrl.stopDisabled"
+                                   ng-class="{active: tidEngineFormCtrl.stopActive}"
+                                   ng-click="tidEngineFormCtrl.onStopClick()">
+                                    stop
+                                </button>
                             </span>
-                            <button id="fire" type="button" class="btn btn-info">fire</button>
+                            <button id="fire" type="button" class="btn btn-info"
+                               ng-disabled="tidEngineFormCtrl.fireDisabled"
+                               ng-class="{active: tidEngineFormCtrl.fireActive}"
+                               ng-click="tidEngineFormCtrl.onFireClick()">
+                                fire
+                            </button>
                         </div>
                     </div>
                     <br/>
                     <div class="row">
                         <div class="col-lg-3 col-md-4 col-xs-5 settings-hor-title">Maximum empty responses on incremental</div>
                         <div class="col-lg-9 col-md-8 col-xs-7">
-                            <input id="max-empty" data-slider-id="max-empty-slider" data-val-id="max-empty-val" type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="10"/>
-                            <span id="max-empty-val"></span>
+                            <input id="max-empty" data-slider-id="max-empty-slider" data-val-id="max-empty-val" type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="10"
+                               ng-model="tidEngineFormCtrl.maxEmptyRequests"
+                               tid-engine-slider="0, 10, 50, 100, 200, 500, 1000">
+                            <span id="max-empty-val"
+                               ng-bind="tidEngineFormCtrl.maxEmptyRequests">
+                            </span>
                             <span class="hidden-xs">requests, then drop to recheck</span>
                         </div>
                     </div>
@@ -67,17 +94,31 @@
                     <div class="row">
                         <div class="col-lg-3 col-md-4 col-xs-5 settings-hor-title">Maximum log rows</div>
                         <div class="col-lg-9 col-md-8 col-xs-7">
-                            <input id="log-size" data-slider-id="log-size-slider" data-val-id="log-size-val" type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="100"/>
-                            <span id="log-size-val"></span>
-                            <span class="hidden-xs">, older will be cleaned <a id="clean-log" class="btn btn-link">(force clean)</a></span>
+                            <input id="log-size" data-slider-id="log-size-slider" data-val-id="log-size-val" type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="100"
+                               ng-model="tidEngineFormCtrl.logSize"
+                               tid-engine-slider="0, 10, 50, 100, 200, 500, 1000">
+                            <span id="log-size-val"
+                               ng-bind="tidEngineFormCtrl.logSize">
+                            </span>
+                            <span class="hidden-xs">
+                                , older will be cleaned
+                                <a id="clean-log" class="btn btn-link"
+                                   ng-click="tidEngineFormCtrl.onCleanLogClick()">
+                                    (force clean)
+                                </a>
+                            </span>
                         </div>
                     </div>
 
                     <div class="row">
                         <div class="col-lg-3 col-md-4 col-xs-5 settings-hor-title">Maximum waiting time</div>
                         <div class="col-lg-9 col-md-8 col-xs-7">
-                            <input id="wait-time" data-slider-id="wait-time-slider" data-val-id="wait-time-val" type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="100"/>
-                            <span id="wait-time-val"></span>
+                            <input id="wait-time" data-slider-id="wait-time-slider" data-val-id="wait-time-val" type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="100"
+                               ng-model="tidEngineFormCtrl.vm.waitTime"
+                               tid-engine-slider="30, 60, 100, 120, 600, 1000">
+                            <span id="wait-time-val"
+                               ng-bind="tidEngineFormCtrl.vm.waitTime">
+                            </span>
                             <span class="hidden-xs"> seconds, then retry</span>
                         </div>
                     </div>
@@ -86,26 +127,38 @@
 
             <div class="row text-center">
                 <div class="col-xs-2">
-                    <span class="glyphicon glyphicon-time"></span> <span id="time">0</span>s
-                    <div id="last-time-holder">(<span class="hidden-xs">last time: </span><span id="last-time"></span>s)</div>
+                    <span class="glyphicon glyphicon-time"></span>
+                    <span id="time" ng-bind="tidEngineFormCtrl.timeText"></span>s
+                    <div id="last-time-holder"
+                       ng-bind="tidEngineFormCtrl.lastTimeVisible">
+                        (<span class="hidden-xs">last time: </span><span id="last-time" ng-bind="tidEngineFormCtrl.lastTime"></span>s)
+                    </div>
                 </div>
                 <div class="col-xs-2">
-                    <span class="glyphicon glyphicon-chevron-right"></span> <span id="offset">0</span>
+                    <span class="glyphicon glyphicon-chevron-right"></span>
+                    <span id="offset" ng-bind="tidEngineFormCtrl.currentOffset"></span>
                 </div>
                 <div class="col-xs-2">
-                    <span class="glyphicon glyphicon-arrow-up"></span> <span id="requests-sent">0
-                </span>
+                    <span class="glyphicon glyphicon-arrow-up"></span>
+                    <span id="requests-sent" ng-bind="tidEngineFormCtrl.requestsSentAmount"></span>
                 </div>
                 <div class="col-xs-2">
-                    <span class="glyphicon glyphicon-ok"></span> <span id="success-number">0</span>
+                    <span class="glyphicon glyphicon-ok"></span>
+                    <span id="success-number" ng-bind="tidEngineFormCtrl.successNumber"></span>
                 </div>
                 <div class="col-xs-4">
                     <!-- <button class="btn btn-link pull-right" id="clean-log"><span class="glyphicon glyphicon-trash"></span></button> -->
-                    <span class="glyphicon glyphicon-flash"></span> <span id="status">standby</span>
+                    <span class="glyphicon glyphicon-flash"></span>
+                    <span id="status"
+                       ng-bind="tidEngineFormCtrl.currentStatus">
+                    </span>
                 </div>
             </div>
             <div class="panel panel-default">
-                <div id="log" class="panel-body"></div>
+                <div id="log" class="panel-body">
+                    <div ng-repeat="row in tidEngineFormCtrl.logRows | limitTo: tidEngineFormCtrl.logSize"
+                       ng-bind="row"></div>
+                </div>
             </div>
             <!-- <div id="result">results will be here</div> -->
 
