Splitted ng entities, added gulp+webpack+npm build

--- a/mean/client/modules/engine/index.htm
+++ b/mean/client/modules/engine/index.htm
@@ -166,6 +166,6 @@
             <!-- for test only -->
         </div>
 
-        <script src="tid-engine.js"></script>
+        <script src="build/tid-engine.js"></script>
     </body>
 </html>
