Moved CSS to gulp build in engine

--- a/mean/client/modules/engine/index.htm
+++ b/mean/client/modules/engine/index.htm
@@ -7,9 +7,7 @@
 
         <title>TID</title>
 
-        <link rel="stylesheet" type="text/css" href="../../vendors/bootstrap.css">
-        <link rel="stylesheet" type="text/css" href="../../vendors/bootstrap-slider.css">
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="build/tid-styles.css">
     </head>
     <body ng-app="TidApp" tid-engine-form>
         <div class="container">
