--- a/mean/client/modules/engine/index.htm
+++ b/mean/client/modules/engine/index.htm
@@ -66,7 +66,7 @@
                     <div class="row">
                         <div class="col-lg-3 col-md-4 col-xs-5 settings-hor-title">Maximum empty responses on incremental</div>
                         <div class="col-lg-9 col-md-8 col-xs-7">
-                            <input type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="10"
+                            <input type="text"
                                ng-model="tidEngineFormCtrl.maxEmptyRequests"
                                tid-engine-slider="0, 10, 50, 100, 200, 500, 1000">
 
@@ -78,7 +78,7 @@
                     <div class="row">
                         <div class="col-lg-3 col-md-4 col-xs-5 settings-hor-title">Maximum log rows</div>
                         <div class="col-lg-9 col-md-8 col-xs-7">
-                            <input type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="100"
+                            <input type="text"
                                ng-model="tidEngineFormCtrl.logSize"
                                tid-engine-slider="0, 10, 50, 100, 200, 500, 1000">
 
@@ -97,7 +97,7 @@
                     <div class="row">
                         <div class="col-lg-3 col-md-4 col-xs-5 settings-hor-title">Maximum waiting time</div>
                         <div class="col-lg-9 col-md-8 col-xs-7">
-                            <input type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="100"
+                            <input type="text"
                                ng-model="tidEngineFormCtrl.waitTime"
                                tid-engine-slider="30, 60, 100, 120, 600, 1000">
 
